  that weapon and gives identifying messages similar to wearing other items that
  grant stealth.
* Improve stacking of random candles by removing random chance of them being
  blessed or cursed (from AceHack).  Between wax and tallow candles, and
  blessed, uncursed and cursed status, an inventory could be filled with 6
  different candle stacks, even with DynaHack's improved item stacking!
* Allow knife and stiletto as possible tin-opening tools (from K-Mod).
* Fix C343-146: "Unseen wand of striking becomes known if zapped by unseen
  monster and it hits a door."
* Fix wielding of a cockatrice corpse bare-handed while wearing chromatic dragon
  scales or scale mail not triggering petrification.
* Fix leaking of descriptions of prizes selected from level memory with far-look
  after the prize itself has vanished.
* Fix contents of containers created on special levels not being included in the
  initial container weight.

Monsters
--------
* Instant petrification completely replaced with delayed petrification: you will
  always have a few turns to save yourself from instant death.
* Metallivores and disintegrators can eat through iron bars (from UnNetHack).
* Allow Demogorgon to be bribed, since his lair is now guaranteed.
* Tone back demon bribery amounts inherited from UnNetHack: demons now only ask
  for 1000 to 2000 gold.
    - Giving within 80% of the money demanded for a demon bribe succeeds between
      25% to 75% of the time depending on how close your offer is to the
      demanded amount.
* Tone back 1-to-1 initial monster population difficulty inherited from
  NetHack4: it is now only like that for the first 10 levels, then 1-to-2 for
  the remainder.  This gives a progression similar to that of NetHack.
* Tone back on the effect of a monster's level on its raw spell damage;
  otherwise Asmodeus cold spell-casting attack could do over twice the damage of
  Master Kaen without cold resistance, which is too much even for overprepared
  characters.