@@ -145,15 +145,15 @@ WEAPON("battle-axe", "double-headed axe",
 
 /* swords */
 WEAPON("short sword", NULL,
-	1, 0, 0,  6, 30, 10,  6,  8, 0, P,   P_SHORT_SWORD, IRON, HI_METAL),
+	1, 0, 0,  6, 30, 10,  6,  8, 1, P,   P_SHORT_SWORD, IRON, HI_METAL),
 WEAPON("elven short sword", "runed short sword",
-	0, 0, 0,  2, 30, 10,  8,  8, 0, P,   P_SHORT_SWORD, WOOD, HI_WOOD),
+	0, 0, 0,  2, 30, 10,  8,  8, 1, P,   P_SHORT_SWORD, WOOD, HI_WOOD),
 WEAPON("orcish short sword", "crude short sword",
-	0, 0, 0,  3, 30, 10,  5,  8, 0, P,   P_SHORT_SWORD, IRON, CLR_BLACK),
+	0, 0, 0,  3, 30, 10,  5,  8, 1, P,   P_SHORT_SWORD, IRON, CLR_BLACK),
 WEAPON("dwarvish short sword", "broad short sword",
-	0, 0, 0,  2, 30, 10,  7,  8, 0, P,   P_SHORT_SWORD, IRON, HI_METAL),
+	0, 0, 0,  2, 30, 10,  7,  8, 1, P,   P_SHORT_SWORD, IRON, HI_METAL),
 WEAPON("silver short sword", NULL,
-	1, 0, 0,  2, 36, 50,  6,  8, 0, P,   P_SHORT_SWORD, SILVER, HI_SILVER),
+	1, 0, 0,  2, 36, 50,  6,  8, 1, P,   P_SHORT_SWORD, SILVER, HI_SILVER),
 WEAPON("scimitar", "curved sword",
 	0, 0, 0, 15, 40, 15,  8,  8, 0, S,   P_SCIMITAR, IRON, HI_METAL),
 WEAPON("silver saber", NULL,
