@@ -176,6 +176,7 @@ Items
   blessed or cursed (from AceHack).  Between wax and tallow candles, and
   blessed, uncursed and cursed status, an inventory could be filled with 6
   different candle stacks, even with DynaHack's improved item stacking!
+* Grant +1 to-hit for all short swords.
 * Allow knife and stiletto as possible tin-opening tools (from K-Mod).
 * Fix C343-146: "Unseen wand of striking becomes known if zapped by unseen
   monster and it hits a door."
